[gd_scene load_steps=16 format=2]

[ext_resource path="res://asset/DNFBitBitTTF.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://asset/effectSoundOn.png" type="Texture" id=2]
[ext_resource path="res://bgMusic.tscn" type="PackedScene" id=3]
[ext_resource path="res://asset/effectSoundOff.png" type="Texture" id=4]
[ext_resource path="res://asset/button40.png" type="Texture" id=5]
[ext_resource path="res://Main.gd" type="Script" id=6]
[ext_resource path="res://asset/background1.jpg" type="Texture" id=7]
[ext_resource path="res://asset/HBIOS-SYS-prop.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://asset/button60.png" type="Texture" id=9]
[ext_resource path="res://asset/bgmOn.png" type="Texture" id=10]
[ext_resource path="res://asset/bgmOff.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=4]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 8 )

[node name="Main" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 1.90596, 1.86025 )
texture = ExtResource( 7 )

[node name="title" type="Label" parent="."]
margin_left = 1.0
margin_top = 130.0
margin_right = 1023.0
margin_bottom = 200.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "BEAN's ADVENTURE"
align = 1

[node name="Credit" type="Node2D" parent="."]
position = Vector2( 416, 400 )

[node name="CreditButton" type="TextureButton" parent="Credit"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )

[node name="credit" type="Label" parent="Credit"]
margin_left = 3.0
margin_top = 17.0
margin_right = 190.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "CREDIT"
align = 1

[node name="Records" type="Node2D" parent="."]
position = Vector2( 416, 320 )

[node name="RecordsButton" type="TextureButton" parent="Records"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )

[node name="records" type="Label" parent="Records"]
margin_top = 19.0
margin_right = 192.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "RECORDS"
align = 1

[node name="Play" type="Node2D" parent="."]
position = Vector2( 416, 240 )

[node name="PlayButton" type="TextureButton" parent="Play"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )

[node name="play" type="Label" parent="Play"]
margin_left = 3.0
margin_top = 16.0
margin_right = 190.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "PLAY"
align = 1

[node name="Sound" type="Node2D" parent="."]

[node name="Node2D" type="Node2D" parent="Sound"]
position = Vector2( 900, 550 )

[node name="bgmButton" type="TextureButton" parent="Sound/Node2D"]
margin_left = -34.0
margin_top = -32.0
margin_right = 30.0
margin_bottom = 32.0
toggle_mode = true
texture_normal = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="Sound/Node2D"]
visible = false
texture = ExtResource( 11 )

[node name="Node2D2" type="Node2D" parent="Sound"]
position = Vector2( 967, 552 )

[node name="effectSoundButton" type="TextureButton" parent="Sound/Node2D2"]
margin_left = -31.0
margin_top = -33.0
margin_right = 33.0
margin_bottom = 31.0
toggle_mode = true
texture_normal = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Sound/Node2D2"]
visible = false
texture = ExtResource( 4 )

[node name="bgMusic" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="Credit/CreditButton" to="." method="_on_CreditButton_pressed"]
[connection signal="pressed" from="Records/RecordsButton" to="." method="_on_RecordsButton_pressed"]
[connection signal="pressed" from="Play/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Sound/Node2D/bgmButton" to="." method="_on_bgmButton_pressed"]
[connection signal="pressed" from="Sound/Node2D2/effectSoundButton" to="." method="_on_effectSoundButton_pressed"]
